[package]
name = "posthog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "*", features = ["serde"] }
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
dotenv = "*"
tracing = "*"
tracing-subscriber = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "*"
